# puzzles

./: .gitignore  .gitmodules  Cargo.toml  utils.py  view.py
baselines/: gold-tf-02.md  gold-tf-02.model
crates/cli/: Cargo.toml
crates/cli/src/: bench_batch.rs  complexity_main.rs  diag_q.rs  eval_tuned.rs  main.rs  self_play_main.rs  show_dreams.rs  show_poser.rs  train_main.rs
crates/lang/: Cargo.toml
crates/lang/src/: arena.rs  builtin.rs  construct.rs  error.rs  eval.rs  ir.rs  lib.rs  library.rs  pretty.rs  serial.rs  ty.rs
crates/lang/tests/: eval_suite.rs  properties.proptest-regressions  properties.rs  serialise.rs
crates/neural/: Cargo.toml
crates/neural/src/: attn.rs  embed.rs  feat.rs  forward_head.rs  heads.rs  lib.rs  mlp.rs  network.rs  poser_head.rs  rng.rs  sigreg.rs  train.rs  value_head.rs
crates/search/: Cargo.toml
crates/search/benches/: trivial_list.rs
crates/search/src/: config.rs  guided.rs  lib.rs  pool.rs  solve.rs  training.rs  value_hash.rs
crates/search/tests/: identity.rs  trivial_list.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs
crates/training/: Cargo.toml
crates/training/src/: actor_critic.rs  complexity.rs  curriculum.rs  dream.rs  eval.rs  gold.rs  lib.rs  self_play.rs  train.rs  trajectory.rs
crates/training/tests/: dream_examples.rs
docs/: 00-overview.md  01-language.md  02-neural.md  03-search.md  04-library.md  05-tasks.md  06-training.md  07-testing.md  08-roadmap.md  09-questions.md  09-self-play-plan.md  10-self-play-status.md  README.md  joint-optimization-design.html
docs/decisions/: m1-lang.md  m2-search-tasks.md  m2-strip-static-types.md
graph-seek/: Cargo.toml
graph-seek/src/: evaluate.rs  grammar.pest  main.rs  parse_program.rs  parser.rs
results/: curriculum_cum_n32.md  curriculum_n24.md  curriculum_n32_long.md
solutions/: 007bbfb7.py  00d62c1b.py  025d127b.py  045e512c.py  0520fde7.py  05269061.py
