[workspace]
resolver = "2"
members = [
    "crates/lang",
    "crates/neural",
    "crates/search",
    "crates/library",
    "crates/tasks",
    "crates/training",
    "crates/cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
rustc-hash = "2"
thiserror = "1"
