[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "graph-seek-complexity"
path = "src/complexity_main.rs"

[[bin]]
name = "graph-seek-bench-batch"
path = "src/bench_batch.rs"

[[bin]]
name = "graph-seek-show-dreams"
path = "src/show_dreams.rs"

[dependencies]
lang = { path = "../lang" }
neural = { path = "../neural" }
search = { path = "../search" }
training = { path = "../training" }
tasks = { path = "../tasks" }
candle-core = "0.10"
candle-nn = "0.10"
indicatif = "0.17"
libc = "0.2"
