[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "graph-seek-show-dreams"
path = "src/show_dreams.rs"

[[bin]]
name = "graph-seek-self-play"
path = "src/self_play_main.rs"

[[bin]]
name = "graph-seek-show-poser"
path = "src/show_poser.rs"

[[bin]]
name = "graph-seek-diag-q"
path = "src/diag_q.rs"

[dependencies]
lang = { path = "../lang" }
neural = { path = "../neural" }
search = { path = "../search" }
training = { path = "../training" }
tasks = { path = "../tasks" }
candle-core = "0.10"
candle-nn = "0.10"
indicatif = "0.17"
libc = "0.2"
