[package]
name = "lang"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
