[package]
name = "neural"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lang = { path = "../lang" }
tasks = { path = "../tasks" }
serde = { workspace = true }
rustc-hash = { workspace = true }
candle-core = "0.10"
candle-nn = "0.10"
