[package]
name = "search"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lang = { path = "../lang" }
neural = { path = "../neural" }
tasks = { path = "../tasks" }
rustc-hash = { workspace = true }
candle-core = "0.10"

[[bench]]
name = "trivial_list"
harness = false
