[package]
name = "training"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lang = { path = "../lang" }
neural = { path = "../neural" }
search = { path = "../search" }
library = { path = "../library" }
tasks = { path = "../tasks" }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
candle-core = "0.10"
candle-nn = "0.10"

[dev-dependencies]
proptest = { workspace = true }
